<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Color Palette</string>
    <string name="color_one">Color one</string>
    <string name="color_two">Color two</string>
    <string name="color_three">Color three</string>
    <string name="color_four">Color four</string>
    <string name="color_five">Color five</string>
    <string name="no_internet">No internet connection!</string>
    <string name="no_data">No received data!</string>
    <string name="unknown_uri">Unknown uri: </string>
    <string name="not_yet">Not yet implemented!</string>
    <string name="failed_insert">Failed to insert row into</string>
    <string name="share_palette">Share palette details</string>
    <string name="palette_s_name">Palette\'s name</string>
    <string name="install_browser">Install Internet browser!</string>
    <string name="delete_list">Delete list</string>
    <string name="exit">Exit</string>
    <string name="no_favorite">No favorite palettes!</string>
    <string name="added_to_favorites_list">Added to favorites list</string>
    <string name="error_message">Something went wrong!</string>
    <string name="exit_app">Do you want to exit from the app?</string>
    <string name="cancel_dialog" tools:ignore="ButtonCase">cancel</string>
    <string name="delete">Delete</string>
    <string name="implement_dialog">must implement DeleteDialogListener!</string>
    <string name="top">Top</string>
    <string name="new_title">New</string>
    <string name="favorite">Favorite</string>
    <string name="link">Link</string>
    <string name="share">Share</string>
    <string name="exit_message">You are one click away to exit from the app</string>
</resources>
