<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v7.widget.CardView
        android:id="@+id/detail_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin"
    app:cardCornerRadius="@dimen/elevation"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detailTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#69d2e7"
            android:gravity="bottom"
            android:textDirection="locale"
            android:contentDescription="@string/color_one"
            app:layout_constraintBottom_toTopOf="@+id/detailTextView1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/detailTextView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:gravity="bottom"
            android:textDirection="locale"
            android:contentDescription="@string/color_two"
            app:layout_constraintBottom_toTopOf="@+id/detailTextView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTextView" />

        <TextView
            android:id="@+id/detailTextView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:gravity="bottom"
            android:textDirection="locale"
            android:contentDescription="@string/color_three"
            app:layout_constraintBottom_toTopOf="@+id/detailTextView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTextView1" />

        <TextView
            android:id="@+id/detailTextView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/black"
            android:gravity="bottom"
            android:textDirection="locale"
            android:contentDescription="@string/color_four"
            app:layout_constraintBottom_toTopOf="@+id/detailTextView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTextView2" />

        <TextView
            android:id="@+id/detailTextView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_red_light"
            android:gravity="bottom"
            android:textDirection="locale"
            android:contentDescription="@string/color_five"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTextView3" />

        <!--Icon made by Freepik from www.flaticon.com-->
        <ImageView
            android:id="@+id/favorite_image"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginEnd="@dimen/widget_margin"
            android:layout_marginTop="@dimen/widget_margin"
            android:padding="@dimen/elevation"
            android:contentDescription="@string/added_to_favorites_list"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/favorite" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/speed_dial_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/widget_margin"
        android:layout_marginEnd="@dimen/widget_margin"
        android:layout_gravity="bottom|end"
        app:sdMainFabClosedSrc="@drawable/add_white"
        app:layout_behavior="@string/speeddial_snackbar_behavior"/>
</android.support.design.widget.CoordinatorLayout>